# wf-groundtruth-utils

./: .env.template  .gitignore  .python-version  LICENSE  README.md  coco_pose_ontology.json  dependabot.yml  justfile  pyproject.toml  setup.py
groundtruth_utils/: __init__.py  annotate.py  base.py  cli.py  coco_generator.py  config.py  core.py  detector.py  draw.py  helper.py  log.py  weights.py
groundtruth_utils/aws/: s3_util.py
groundtruth_utils/coco/models/: annotation.py  category.py  coco.py  image.py
groundtruth_utils/config/: generate_coco_from_keypoint_labels.yml
tasks/wf-bounding-box/: package.json
tasks/wf-bounding-box/processing/: wf-bounding-box-postprocess.py  wf-bounding-box-preprocess.py
tasks/wf-bounding-box/public/: index.html
tasks/wf-bounding-box/src/: App.js  index.css
