[tool.poetry]
name = "wf-groundtruth-utils"
version = "0.2.0"
description = "Tools for processing sagemaker/labelbox labeling jobs"
authors = ["Benjamin Jaffe-Talberg <ben.talberg@gmail.com>"]
readme = "README.md"
repository = "https://github.com/WildflowerSchools/wf-groundtruth-utils"
license = "MIT"
keywords = ['sagemaker', 'labelbox', 'ground truth', 'S3']
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
]
packages = [
    { include = "groundtruth_utils" }
]

[tool.poetry.dependencies]
boto3 = "^1.12"
botocore = "^1.15"
click = ">=7.1.1"
click-log = "^0.3.2"
gdown = "^4.5.1"
gluoncv = "^0.7.0"
jsonpath-ng = "^1.5.1"
labelbox = "^2.4"
mmpose = "^0.28.1"
mmdet = "^2.25.1"
mmcv-full = "^1.6.1"
ndjson = "^0.3.1"
numpy = "^1.20.0"
openmim = "^0.2.1"
Pillow = "*"
pydantic = "^1.5.1"
python = ">=3.8,<3.12"
PyYAML = "^5.3.1"
scipy = "^1.8.0"
torch = [
    {url="https://download.pytorch.org/whl/nightly/cpu/torch-1.13.0.dev20220906-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin'" },
    {version=">=1.11.0", markers = "sys_platform != 'darwin'" },
    #{version="*", markers = "sys_platform == 'darwin'", allow-prereleases = true}
#    # BUG IN POETRY: Should be able to install pytorch for Mac flexibly using an alternative Poetry source
#    # HOwever, Poetry ignores the Mac wheels in the remote source repo
#    #{ version = "^1.13.0.dev*", allow-prereleases = true, source = "torch-nightly-cpu" }
]
torchvision = [
    {url="https://download.pytorch.org/whl/nightly/cpu/torchvision-0.14.0.dev20220906-cp310-cp310-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin'" },
    {version="*", allow-prereleases = true}
    #{version = "^0.14.0.*", allow-prereleases = true, source = "torch-nightly-cpu", markers = "sys_platform == 'darwin'" }
]
wf-pycocotools = "^2.0.1.4"
python-dotenv = "^0.20.0"
wf-cv-utils = "^3.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
black = "^22.3.0"

#[[tool.poetry.source]]
#name = "torch-nightly-cpu"
#url = "https://download.pytorch.org/whl/nightly/cpu"
#secondary = true
#default = false

[tool.poetry.scripts]
groundtruth = "groundtruth_utils.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"] #, "numpy", "torch", "torchvision", "mmcv-full"
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'